test-ingress-proces/kong/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    konghq.com/protocol: grpc
  name: dune-quote-service
  labels:
    app: dune-quote-service
spec:
  ports:
    - name: grpc
      port: 9001
      targetPort: 9001
  selector:
    app: dune-quote-service
